Add RM chars to RAM debug

--- a/Main_Module_summary.html
+++ b/Main_Module_summary.html
@@ -7,7 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Project_File.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD> No Errors </TD>
+<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='/home/leorando/Lab_Advanced_Electronics/Microprocessor/Mock8080/_xmsgs/pn_parser.xmsgs?&DataKey=Error'>1 Error</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -75,5 +75,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/03/2022 - 10:54:50</center>
+<br><center><b>Date Generated:</b> 03/05/2022 - 14:34:32</center>
 </BODY></HTML>
